force-app/main/default/objects/SupplierDocuments__c/SupplierDocuments__c.object-meta.xml
<CustomObject>
    <description>Store Supplier Documents.</description>
    <label>Supplier Documents</label>
    <nameField>
        <label>Supplier Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>