force-app/main/default/objects/SupplierDocuments__c/fields/ContainerType__c.field-meta.xml
<CustomField>
    <fullName>ContainerType__c</fullName>
    <label>Container Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bin</fullName>
            </value>
            <value>
                <fullName>Bale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>