force-app/main/default/objects/SupplierDocuments__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(StartDate__c &lt;= TODAY(), ExpiryDate__c &gt;= TODAY())</formula>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>