force-app/main/default/objects/SupplierDocuments__c/fields/IssuingAuthority__c.field-meta.xml
<CustomField>
    <fullName>IssuingAuthority__c</fullName>
    <label>Issuing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal &amp; Plant Health Agency</fullName>
            </value>
            <value>
                <fullName>EA (Environment Agency) - England</fullName>
            </value>
            <value>
                <fullName>EPA (Environmental Protection Agency) - ROI</fullName>
            </value>
            <value>
                <fullName>NIEA (Northern Ireland Environment Agency)</fullName>
            </value>
            <value>
                <fullName>NRW (Natural Resources Wales)</fullName>
            </value>
            <value>
                <fullName>SEPA (Scottish Environmental Protection Agency)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>