force-app/main/default/objects/SupplierDocuments__c/fields/LicenceHolder__c.field-meta.xml
<CustomField>
    <fullName>LicenceHolder__c</fullName>
    <label>Licence Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>