force-app/main/default/objects/SupplierDocuments__c/fields/LicenceType__c.field-meta.xml
<CustomField>
    <fullName>LicenceType__c</fullName>
    <label>Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Upper Tier</fullName>
            </value>
            <value>
                <fullName>Lower Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>