force-app/main/default/objects/SupplierDocuments__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <label>Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>