force-app/main/default/objects/SupplierDocuments__c/fields/SignedBySupplier__c.field-meta.xml
<CustomField>
    <fullName>SignedBySupplier__c</fullName>
    <label>Signed By Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>