force-app/main/default/objects/SupplierDocuments__c/fields/SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccount__c</fullName>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Documents</relationshipLabel>
    <relationshipName>SupplierDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>