force-app/main/default/objects/SupplierDocuments__c/fields/TerminationClause__c.field-meta.xml
<CustomField>
    <fullName>TerminationClause__c</fullName>
    <label>Termination Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>