force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireContainerType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireContainerType</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL( DocumentType__c, &apos;Risk Assessment&apos;),
ISPICKVAL( DocumentType__c , &apos;Method Statement&apos;)
),
ISBLANK(ContainerType__c)
)</errorConditionFormula>
    <errorMessage>Container Type is mandatory for this document type.</errorMessage>
</ValidationRule>