force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireIssuingAuthority.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireIssuingAuthority</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
ISPICKVAL( DocumentType__c, &apos;Waste Carrier Licence&apos;), ISPICKVAL( IssuingAuthority__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>IssuingAuthority__c</errorDisplayField>
    <errorMessage>Issuing Authority is mandatory for this document type.</errorMessage>
</ValidationRule>