force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireLicenseHolder.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireLicenseHolder</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
ISPICKVAL( DocumentType__c, &apos;Waste Carrier Licence&apos;), ISBLANK(LicenceHolder__c)
)</errorConditionFormula>
    <errorDisplayField>LicenceHolder__c</errorDisplayField>
    <errorMessage>Licence Holder is mandatory for this document type.</errorMessage>
</ValidationRule>