force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireLicenseType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireLicenseType</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
ISPICKVAL( DocumentType__c, &apos;Waste Carrier Licence&apos;), ISPICKVAL( LicenceType__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>LicenceType__c</errorDisplayField>
    <errorMessage>Licence Type is mandatory for this document type.</errorMessage>
</ValidationRule>