force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireSigned.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSigned</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL( DocumentType__c, &apos;Purchase of Waste Services Agreement&apos;),
ISPICKVAL( DocumentType__c , &apos;Supplier Contract&apos;)
),
ISBLANK(Signed__c)
)</errorConditionFormula>
    <errorDisplayField>Signed__c</errorDisplayField>
    <errorMessage>Signed By GZ is mandatory for this document type.</errorMessage>
</ValidationRule>