force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireSignedBySupplier.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSignedBySupplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL( DocumentType__c, &apos;Purchase of Waste Services Agreement&apos;),
ISPICKVAL( DocumentType__c , &apos;Supplier Contract&apos;)
),
ISBLANK(SignedBySupplier__c)
)</errorConditionFormula>
    <errorDisplayField>SignedBySupplier__c</errorDisplayField>
    <errorMessage>Signed By Supplier is mandatory for this document type.</errorMessage>
</ValidationRule>