force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireTerminationClause.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireTerminationClause</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
        ISPICKVAL( DocumentType__c, &apos;Supplier Contract&apos;),
        ISBLANK(TerminationClause__c)
)</errorConditionFormula>
    <errorDisplayField>TerminationClause__c</errorDisplayField>
    <errorMessage>Termination Clause is mandatory for this document type.</errorMessage>
</ValidationRule>