force-app/main/default/objects/SupplierDocuments__c/validationRules/RequireValue.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireValue</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL( DocumentType__c , &apos;Employers Liability Insurance&apos;),
ISPICKVAL( DocumentType__c , &apos;Public Liability Insurance&apos;),
ISPICKVAL( DocumentType__c , &apos;Professional Indemnity&apos;)
),
ISBLANK(Value__c)
)</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Value is mandatory for this document type.</errorMessage>
</ValidationRule>